added dummy note play for iOS devices

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,3 +6,4 @@ html
 		script(type='text/javascript', src='/javascripts/index.js')
 	body
 		| plays midi incoming via websockets
+		button#iosenable iOS only: enable audioAPI
